# FFvid

./: App.cpp  App.h  CMakeLists.txt  CMakeSettings.json  FFvid.sln  FFvid.vcxproj  FFvid.vcxproj.filters  MainFrame.cpp  README.md  abbc  abbc.txt
Modules/Join/: Join.cpp  Join.h
Modules/Trim/: Trim.cpp  Trim.h
src/: App.cpp  CMakeLists.txt  FFmpeg.cpp  FFmpeg.h  Format.h  MainFrame.cpp  MainFrame.h  resource.rc
src/Controls/: FilePath.h  FilePathCtrl.cpp  FilePathCtrl.h  FilesPathsOrderedListView.cpp  FilesPathsOrderedListView.h  ProcessBar.cpp  ProcessBar.h
src/Modules/: Module.h
src/Modules/Join/: Join.cpp  Join.h
src/Modules/RemoveData/: RemoveData.cpp  RemoveData.h
src/Modules/Trim/: Trim.cpp  Trim.h
src/Modules/Watermark/: Watermark.cpp  Watermark.h
